syntax = "proto3";

package grm.protobuf;

import "RenderConfig.proto";
import "Scene.proto";
import "Texture.proto";

enum RenderDevice {
  CPU = 0;
  GPU = 1;
}

message RenderRequest {
  RenderDevice device = 1;
  Scene scene = 2;
  RenderConfig config = 3;
}

message RenderCancellationRequest{}

message Request {
  oneof Content {
    RenderRequest renderRequest = 1;
    RenderCancellationRequest renderCancellationRequest = 2;
  }
}

message RenderCanceled {}
message RenderError {
  string reason = 1;
}

message RequestFailure {
  string reason = 1;
}

message RenderResult {
  oneof Result {
    Texture success = 1;
    RenderCanceled canceled = 2;
    RenderError error = 3;
  }
}

message Response {
    oneof Union {
      RequestFailure invalidRequest = 1;
      RenderResult result = 2;
    }
}